# ajar

./: CITATION.cff  CONTRIBUTING.md  LICENSE  Readme.md  pyproject.toml
.github/workflows/: docs.yml  testing.yml
ajar/: __init__.py  judging_agent.py
docs/: Makefile
docs/source/: api.rst  conf.py  index.rst
tests/: __init__.py  test_argumentation.py
