[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ajar"
version = "1.0.0"
authors = [
    { name = "Benoît Alcaraz" },
]
maintainers = [
    { name = "Rémy Chaput", email = "rchaput.pro@gmail.com" },
]
description = "AJAR: An Argumentation-based Judging Agents Framework for Ethical Reinforcement Learning"
readme = "Readme.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "Argumentation",
    "Reinforcement Learning",
    "Machine Ethics",
    "Hybrid Neural-Symbolic Learning",
    "Ethical Judgment",
    "Artificial Moral Agent",
]

[project.urls]
"Source code" = "https://github.com/ethicsai/ajar"
"Bug Tracker" = "https://github.com/ethicsai/ajar/issues"
"Documentation" = "https://ethicsai.github.io/ajar/"

# Ignore some files when building with hatchling
[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/dist",
    "/docs",
    "/.ipynb_checkpoints",
    "/*.patch",
    "/*.csv",
    "/*.ipynb",
    "/.pytest_cache",
    "/.ruff_cache",
]
